--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="/build/main.css">
   </head>
   <body>
+    <script type="text/javascript" src="build/locale/en/i18n.js"></script>
     <script type="text/javascript" src="build/libraries.js"></script>
     <script type="text/javascript" src="build/application.js"></script>
   </body>
