--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,11 @@
     <link type="text/css" rel="stylesheet" href="/build/main.css">
   </head>
   <body>
-    <script type="text/javascript" src="build/locale/en/i18n.js"></script>
-    <script type="text/javascript" src="build/libraries.js"></script>
-    <script type="text/javascript" src="build/application.js"></script>
+    <!-- comment these two scripts out to remove mocked backend -->
+    <script type="text/javascript" src="/components/backend/backend.js"></script>
+    <script type="text/javascript" src="/app/mocked-api.js"></script>
+    <script type="text/javascript" src="/build/locale/en/i18n.js"></script>
+    <script type="text/javascript" src="/build/libraries.js"></script>
+    <script type="text/javascript" src="/build/application.js"></script>
   </body>
 </html>
