bunch of refactoring

--- a/web/index.html
+++ b/web/index.html
@@ -9,9 +9,8 @@
     <link type="text/css" rel="stylesheet" href="/build/main.css">
   </head>
   <body>
-    <!-- comment these two scripts out to remove mocked backend -->
-    <script type="text/javascript" src="/components/backend/backend.js"></script>
-    <script type="text/javascript" src="/app/mocked-api.js"></script>
+    <!-- comment this script out to remove mocked backend | when building production code -->
+    <script type="text/javascript" src="/build/mocked.js"></script>
     <script type="text/javascript" src="/locale/en/i18n.js"></script>
     <script type="text/javascript" src="/build/libraries.js"></script>
     <script type="text/javascript" src="/build/application.js"></script>
