--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,6 @@
     <link type="text/css" rel="stylesheet" href="/build/main.css">
   </head>
   <body>
-
-    <!-- comment this script out to remove mocked backend | when building production code -->
     <script type="text/javascript" src="/app/misc/ua-parser.js"></script>
     <script type="text/javascript">
       window.userAgentDetails = new UAParser();
@@ -19,9 +17,10 @@
         document.querySelector('body').style.cursor = 'pointer';
       }
     </script>
-    <script type="text/javascript" src="/build/mocked.js"></script>
+    <script type="text/javascript" src="/build/mocked-api.js"></script>
     <script type="text/javascript" src="/locale/en/i18n.js"></script>
     <script type="text/javascript" src="/build/libraries.js"></script>
+    <script type="text/javascript" src="/build/mocked-local-storage.js"></script>
     <script type="text/javascript" src="/build/application.js"></script>
   </body>
 </html>
