added different monting point for react

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,8 @@
     <link type="text/css" rel="stylesheet" href="/build/main.css">
   </head>
   <body>
+    <div class="react-bootstrap-element"></div>
+    <div>SOME RANDOM CONTENT</div>
     <script type="text/javascript" src="/app/misc/ua-parser.js"></script>
     <script type="text/javascript">
       window.userAgentDetails = new UAParser();
